--- a/index.html
+++ b/index.html
@@ -4,42 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>bmi-Calculate</title>
-    <link rel="stylesheet" href="main.css">
+    <title>Web dews</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Calculate your BMI</h1><br><br>
-
-        <form action="">
-            <input type="text" class="input1">
-            <input type="text" class="input2">
-            <!-- <input type="text" class="input2"> -->
-            <button type="submit">Calculate</button>
-        </form><br><br>
-        
-        <h1>BMI Summary</h1><br><br>
-
-        <div class="main">
-            <address>
-                 Underweight: BMI is less than 18.5 <br>
-                 <span>Normal weight: BMI is 18.5 to 24.9</span><br>
-                 Overweight: BMI is 25 to 29.9<br>
-                 Obese: BMI is 30 or more<br>
-            </address>
-            <address>
-                <h1 id="hi"></h1>
-                <h1 id="hi2"></h1>
-                <h1 id="hi3"></h1>
-                <h1 id="hi4"></h1>
-                <!-- <h2 id="h2"></h2>     -->
-                <img src="" alt="" class="imges">
-            </address>
-        </div>
-
-    </div>
-
-
-    <script src="node.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
